# poestk

./: .eslintrc  .eslintrc.js  .gitignore  .prettierrc.js  Cargo.toml  README.md  babel.config.js  doczrc.js  env.json  jest.config.js  now.json  package.json  readme.md  run.build.js  run.dev.js  run.js  server.js  tsconfig.dev.json  tsconfig.json  tsconfig.prod.json  tsconfig.test.json  tslint.json
client/: .babelrc  .eslintrc  README.md  now.json  package-lock.json  package.json  server.js  tsconfig.json  tslint.json
client/.storybook/: config.js  preview-head.html  webpack.config.js
client/config/: paths.js  webpack.config.base.js  webpack.config.dev.js  webpack.config.prod.js
client/public/: electron.js  index.html  manifest.json
client/scripts/: get-replacement.js
client/src/: agent.ts  authGuard.tsx  constants.js  constants.ts  contrastTheme.json  darkContrastTheme.json  defaultTheme.json  emitter.ts  index.js  index.tsx  routes.js  routes.ts  theme.ts
client/stories/: Icon.stories.tsx  (+1 more)
config/: webpack.config.dev.js
env/: applicationSettings.dev.json  applicationSettings.json
filter/: package.json  readme.md
filterJsonData/: package.json
filterv2/: .eslintrc  package.json
mod/: index.js  parseMods.js  scheme.js
pst/: .babelrc  .eslintrc  license  package-lock.json  package.json  readme.md  webpack.config.js
public/: index.html  manifest.json
server/: app.js  package.json  role.js
src/: constants.js  constants.tsx  environment.d.ts  global.d.ts  index.html  index.tsx  main.tsx  manifest.json  routes.js
static_backend/: main.rs
(+575 files in other folders)
