[package]
name = "poestk-static-file-service"
version = "0.1.0"
authors = ["emil nordling"]
edition = "2018"

[[bin]]
name = "static_backend"
path = "static_backend/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
actix-rt = "^1.0.0"
env_logger = "^0.8.2"
futures = "^0.3.4"
mime_guess = "^2.0.1"
serde_json = "^1.0.40"
lazy_static = "^1.4.0"
rustls = "^0.16.0"
